{
  "sourceLanguage" : "en",
  "strings" : {
    "Adaptability:" : {

    },
    "Affection Level:" : {

    },
    "Cats" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cats"
          }
        }
      }
    },
    "Check your connection and try again" : {

    },
    "Child Friendly:" : {

    },
    "Dog Friendly:" : {

    },
    "Energy Level:" : {

    },
    "Intelligence:" : {

    },
    "It seems like there is no internet" : {

    },
    "Rare:" : {

    },
    "Social Needs:" : {

    },
    "Something went wrong" : {

    },
    "Try again" : {

    },
    "We are working to resolve the issue" : {

    }
  },
  "version" : "1.0"
}
